--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "xlsx": "^0.18.5",
     "yup": "0.32.11"
   },
-  "homepage": ".",
+  "homepage": "https://facturaciontest.jadal.pe/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
