--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@formatjs/intl-pluralrules": "4.3.3",
     "@formatjs/intl-relativetimeformat": "10.0.1",
     "@fortawesome/fontawesome-free": "6.1.1",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -28,16 +30,20 @@
     "react-hook-form": "^7.36.1",
     "react-inlinesvg": "3.0.0",
     "react-intl": "5.25.0",
+    "react-pdf": "^6.2.2",
     "react-query": "3.38.0",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
     "react-topbar-progress-indicator": "4.1.1",
+    "react-xml-parser": "^1.1.8",
     "sass": "1.50.1",
     "socicon": "3.0.5",
     "sweetalert2": "^11.5.1",
+    "timers-browserify": "^2.0.12",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5",
+    "xml2js": "^0.4.23",
     "yup": "0.32.11"
   },
   "homepage": "https://facturaciontest.jadal.pe/",
